<resources>
    <string name="app_name">RickAndMorty</string>

    <string name="text_characters">Characters</string>
    <string name="text_locations">Locations</string>
    <string name="text_episodes">Episodes</string>
    <string name="avatar_content_description">avatar</string>
    <string name="text_origin">Origin</string>
    <string name="text_location">Location</string>
    <string name="text_residents">Residents</string>
    <string name="text_type">Type:\ </string>
    <string name="text_gender">Gender:\ </string>
    <string name="text_dimension">Dimension:\ </string>
    <string name="text_season">Season:\ </string>
    <string name="text_episode">Episode:\ </string>
    <string name="text_network_unavailable">(The list may not be complete because not all data may have been cashed)</string>
    <string name="item_search_text">Search</string>
    <string name="item_filters_text">Filters</string>
    <string name="item_back_text">Back</string>
    <string name="text_filter_status">Status</string>
    <string name="text_species">Species</string>
    <string name="text_filter_type">Type</string>
    <string name="text_filter_gender">Gender</string>
    <string name="text_apply">Apply</string>
    <string name="text_cancel">Cancel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_filter_dimension">Dimension</string>
    <string name="text_filter_episode">First numbers of episode (\"03\" or \"11\")</string>
    <string name="status_network">Status of network</string>
</resources>