<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.episodes.presentation.detail.EpisodeDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/text_episode_name"
                style="@style/StyleDetailText"
                android:textSize="@dimen/text_big_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="The Ricklantis Mixup" />

            <TextView
                android:id="@+id/text_date"
                style="@style/StyleDetailText"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_episode_name"
                tools:text="September 10, 2017" />

            <TextView
                android:id="@+id/text_title_season"
                style="@style/StyleDetailTitle"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/text_season"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_date" />

            <TextView
                android:id="@+id/text_season"
                style="@style/StyleDetailText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/text_title_season"
                app:layout_constraintTop_toTopOf="@+id/text_title_season"
                tools:text="3" />

            <TextView
                android:id="@+id/text_title_episode_num"
                style="@style/StyleDetailTitle"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/text_episode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_season" />

            <TextView
                android:id="@+id/text_episode_num"
                style="@style/StyleDetailText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/text_title_episode_num"
                app:layout_constraintTop_toTopOf="@+id/text_title_episode_num"
                tools:text="07" />

            <ViewAnimator
                android:id="@+id/view_episode_animator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/animator_size"
                android:layout_marginTop="@dimen/margin"
                android:background="@color/animator_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_episode_num" />

            <TextView
                android:id="@+id/text_episode_characters"
                style="@style/StyleDetailTitle"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/text_characters"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_episode_animator" />

            <TextView
                android:id="@+id/text_episode_network_unavailable"
                style="@style/StyleDetailTitle"
                android:layout_width="match_parent"
                android:text="@string/text_network_unavailable"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_episode_characters" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_episode_characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_episode_characters"
            tools:itemCount="2"
            tools:listitem="@layout/item_character" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>