<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.characters.presentation.detail.CharacterDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:contentDescription="@string/avatar_content_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/text_title_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_character_name"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/text_character_name"
            style="@style/StyleDetailText"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/text_big_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/character_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Morty Smith" />

        <TextView
            android:id="@+id/text_status"
            style="@style/StyleDetailText"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_character_name"
            app:layout_constraintTop_toBottomOf="@+id/text_character_name"
            tools:text="Alive - Human" />

        <TextView
            android:id="@+id/text_title_character_type"
            style="@style/StyleDetailTitle"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/text_type"
            app:layout_constraintStart_toStartOf="@+id/text_status"
            app:layout_constraintTop_toBottomOf="@+id/text_status" />

        <TextView
            android:id="@+id/text_character_type"
            style="@style/StyleDetailText"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_title_character_type"
            app:layout_constraintTop_toTopOf="@+id/text_title_character_type"
            tools:text="TextView" />

        <TextView
            android:id="@+id/text_title_gender"
            style="@style/StyleDetailTitle"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/text_gender"
            app:layout_constraintStart_toEndOf="@+id/character_image"
            app:layout_constraintStart_toStartOf="@+id/text_title_character_type"
            app:layout_constraintTop_toBottomOf="@+id/text_title_character_type" />

        <TextView
            android:id="@+id/text_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_average_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_title_gender"
            app:layout_constraintTop_toTopOf="@+id/text_title_gender"
            tools:text="Male" />

        <ViewAnimator
            android:id="@+id/view_character_animator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/animator_size"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/animator_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_gender" />

        <TextView
            android:id="@+id/text_origin"
            style="@style/StyleDetailTitle"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/text_origin"
            android:textStyle=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_character_animator" />

        <Button
            android:id="@+id/button_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_origin"
            tools:text="Button" />

        <TextView
            android:id="@+id/text_character_location"
            style="@style/StyleDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_location"
            android:textStyle=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_origin"
            app:layout_constraintTop_toBottomOf="@+id/button_origin" />

        <Button
            android:id="@+id/button_character_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_character_location"
            tools:text="Button" />


        <ViewAnimator
            android:id="@+id/view_animator_character2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/animator_size"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/animator_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_character_location" />

        <TextView
            android:id="@+id/text_character_episodes"
            style="@style/StyleDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/text_episodes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_animator_character2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_character_episodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_character_episodes"
        tools:itemCount="2"
        tools:listitem="@layout/item_episode" />

</LinearLayout>

</androidx.core.widget.NestedScrollView>